--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "super-db",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy --minify",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
     "hono": "^4.6.19"
