:iphone:create hyperdrive

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,7 +9,13 @@
   "compatibility_date": "2025-01-29",
   "observability": {
     "enabled": true
-  }
+  },
+  "hyperdrive": [
+    {
+      "binding": "HYPERDRIVE",
+      "id": "2ceda958a8cc495cae02e34e8733e7ff"
+    }
+  ]
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
