--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,6 +7,7 @@
   "name": "super-db",
   "main": "src/index.ts",
   "compatibility_date": "2025-01-29",
+  "compatibility_flags": ["nodejs_compat"],
   "observability": {
     "enabled": true
   },
