--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@neondatabase/serverless": "^0.10.4",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
-    "hono": "^4.6.19"
+    "hono": "^4.6.19",
+    "postgres": "^3.4.5"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250129.0",
